# rt-status

./: .gitignore  docker-compose.yml  readme.md
app/: .prettierignore  README.md  eslint.config.js  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json
app/apps/api/src/: main.ts
app/libs/api/acl/data-access/: README.md  jest.config.ts  project.json
app/libs/api/acl/feature/: README.md  jest.config.ts  project.json
app/libs/api/auth/config/: README.md  jest.config.ts  project.json
app/libs/api/auth/data-access/: jest.config.ts  project.json
app/libs/api/auth/feature/: jest.config.ts  project.json
app/libs/api/auth/models/: README.md  (+2 more)
app/libs/shared/models/: package.json
app/web/: project.json
clients/: Cargo.toml
clients/heartbeat/: Cargo.toml
clients/heartbeat/src/: lib.rs
clients/publisher-http/: Cargo.toml
clients/publisher-http/src/: lib.rs
clients/rt-systemd/: Cargo.toml
clients/rt-systemd/src/: lib.rs  main.rs  systemd.rs
clients/watcher/: Cargo.toml
clients/watcher/src/: lib.rs
http/auth/auth-key/: create.http
http/auth/local/: login.http  register.http
http/device/: create-device.http  find-device-by-id.http  find-device.http  update-device.http
http/device/watcher/: create.http  find.http
http/user/: find.http  findOne.http  update.http
http/watcher/: heartbeat.http
nest-app/app/: pnpm-lock.yaml
nginx/: proxy.conf
timescale/config/: schema.sql
web/: .bitmap  pnpm-lock.yaml  workspace.jsonc
web/scope/backend/: backend.app-root.ts  backend.bit-app.tsx  backend.docs.mdx  backend.spec.ts  backend.ts
(+127 files in other folders)
