[package]
name = "publisher-http"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = "0.12.11"
tokio = { version = "1.42.0", features = ["full"] }
heartbeat = { path = "../heartbeat" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
